# mmap.ninja

./: .gitignore  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  MICROLIB.md  README.md  pyproject.toml
docs/: conf.py  index.rst  mmap_ninja.rst  modules.rst  notes.md
docs/source/: conf.py
examples/: MmapNinjaRaggedMmap.ipynb  MmapNinjaStringsMmap.ipynb  MmapNinjaVideo.ipynb  mmap_ninja_oxford_pets_image_segmentation.ipynb
java/: README.md
mmap_ninja/: generic.py  pyproject.toml  ragged.py
mmap_ninja/src/mmap_ninja/: __init__.py  base.py  generic.py  numpy.py  parallel.py  ragged.py  string.py
mmap_ninja/tests/: test_base.py  test_numpy.py  test_ragged.py  test_string.py
python/: PUBLIC_API.md  README.md  TODO.md  benchmark_images.py  setup.py
python/docs/source/: index.rst
python/mmap_ninja/: base.py  generic.py  numpy.py  ragged.py  string.py
python/tests/: test_base.py  test_numpy.py  test_ragged.py  test_string.py
rust/: .gitignore  Cargo.toml  README.md  test_rust
rust/src/: base.rs  lib.rs
source/: conf.py  index.rst
src/mmap_ninja/: generic.py  ragged.py  string.py
tests/: test_generic.py  test_numpy.py
