# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmap_ninja"
version = "0.7.1"
description = "Microlib for converting LLM weights into sepweight format"
readme = "README.md"
authors = [{ name = "Hristo Vrigazov", email = "hvrigazov@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = ["torch"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/microlib-org/llm_microlibs/llm_sepweight"

[project.optional-dependencies]
dev = ["safetensors", "pytest", "tqdm", "pytest-dotenv"]
