# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmap_ninja"
version = "0.8.1"
description = "mmap.ninja: Memory mapped data structures"
readme = "README.md"
authors = [{ name = "Hristo Vrigazov", email = "hvrigazov@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "tqdm"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/hristo-vrigazov/mmap.ninja"

[project.optional-dependencies]
dev = ["pytest", "tqdm", "pytest-dotenv"]
parallel = ["joblib"]
